--- a/css/main.css
+++ b/css/main.css
@@ -861,6 +861,18 @@ footer .logo {
     z-index: 1;
 }
 
+@media (max-width: 992px) {
+    .finish .finishS::after {
+        content: "";
+        position: absolute;
+        border-left: 2px solid #F9CD50 !important;
+        height: 30px;
+        left: 15%;
+        top: 0;
+        z-index: 1;
+    }
+}
+
 @media (max-width: 575px) {
     footer .rowf {
         display: grid;
